--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -11,7 +11,7 @@ foreach(suite IN LISTS _gentest_test_suites)
 
     target_link_libraries(${target_name}
         PRIVATE
-            ${PROJECT_NAME}_runtime)
+            ${PROJECT_NAME})
 
     target_compile_features(${target_name} PRIVATE cxx_std_23)
     target_compile_options(${target_name} PRIVATE $<$<CXX_COMPILER_ID:Clang>:-Wno-unknown-attributes>)
