Clean bad impl, use fmt and format strings

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,6 +22,7 @@ option(${PROJECT_NAME}_BUILD_TESTING "Build the testing tree" ON)
 if(${PROJECT_NAME}_BUILD_TESTING)
     include(CTest)
     enable_testing()
+    find_package(fmt CONFIG REQUIRED)
     add_subdirectory(tools/core_tests)
     add_subdirectory(tests)
 endif()
