Add generator-driven mocks with runtime, codegen, and tests
- Runtime: add include/gentest/mock.h (expectations, dispatch, gentest::expect).
- Discovery/Render: add tools/src/mock_discovery.{hpp,cpp}, tools/src/render_mocks.{hpp,cpp}; extend tools/src/model.hpp.
- Generator CLI: add --mock-registry and --mock-impl; collect mocks in tools/src/main.cpp.
- Emission: write mock_registry.hpp and mock_impl.cpp alongside suite test_impl.cpp in tools/src/emit.cpp.
- CMake: update cmake/GentestCodegen.cmake to generate+add mocks, define GENTEST_MOCK_REGISTRY_PATH, include registry dir, link impl.
- Build: include new sources in tools/CMakeLists.txt; keep version macro for generated help.
- Tests: add tests/mocking/{types.h,cases.cpp} and wire suite in tests/CMakeLists.txt (4 cases + list checks).
- Docs: expand README with "Mocks"; add DEVLOG entries for mock generation and refactors.
- Behavior: verify expectations via mock dtor; unexpected ref-return now terminates.

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -4,7 +4,8 @@ set(_gentest_test_suites
     failing
     skiponly
     fixtures
-    templates)
+    templates
+    mocking)
 
 foreach(suite IN LISTS _gentest_test_suites)
     set(target_name "${PROJECT_NAME}_${suite}_tests")
@@ -178,6 +179,18 @@ add_test(NAME templates_list_tests_lines
         -DLINES=71
         -DARGS=--list-tests
         -P ${PROJECT_SOURCE_DIR}/cmake/CheckLines.cmake)
+
+add_test(NAME mocking_counts
+    COMMAND ${CMAKE_COMMAND}
+        -DPROG=$<TARGET_FILE:gentest_mocking_tests>
+        -DPASS=4 -DFAIL=0 -DSKIP=0
+        -P ${PROJECT_SOURCE_DIR}/cmake/CheckTestCounts.cmake)
+
+add_test(NAME mocking_list_counts
+    COMMAND ${CMAKE_COMMAND}
+        -DPROG=$<TARGET_FILE:gentest_mocking_tests>
+        -DLIST=ON -DCASES=4
+        -P ${PROJECT_SOURCE_DIR}/cmake/CheckTestCounts.cmake)
 
 # CLI checks for VSCode integration
 add_test(NAME unit_help
