runner: add JUnit XML output via --junit=<file>\n\n- Generated runner now accepts --junit=<path> and writes a minimal JUnit XML report.\n- Collect per-test timing and failures; group by suite/classname.\n- Keep existing colorized console output; only emit file when flag is provided.\n- Update help text and include minimal smoke test (junit_smoke_unit).\n- No behavior change without the flag; all existing tests remain green.

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -252,3 +252,12 @@ add_test(NAME fixtures_list_tests_lines
         -DLINES=7
         -DARGS=--list-tests
         -P ${PROJECT_SOURCE_DIR}/cmake/CheckLines.cmake)
+
+# JUnit XML smoke test: generate and validate basic content
+add_test(NAME junit_smoke_unit
+    COMMAND ${CMAKE_COMMAND}
+        -DPROG=$<TARGET_FILE:gentest_unit_tests>
+        -DFILE=${CMAKE_CURRENT_BINARY_DIR}/junit_unit.xml
+        -DEXPECT_SUBSTRING=<testsuite name=\"unit\"
+        -DARGS=--junit=${CMAKE_CURRENT_BINARY_DIR}/junit_unit.xml
+        -P ${PROJECT_SOURCE_DIR}/cmake/CheckFileContains.cmake)
