allure: align result file names and time fields with Allure 2 conventions\n\n- Write test results as *-result.json and attachments as *-attachment.txt.\n- Emit top-level start/stop fields; keep duration implicit.\n- Update tests to reflect naming and ensure attachment source matches.\n- Keeps previous functionality, improves compatibility with Allure readers.

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -274,7 +274,7 @@ add_test(NAME junit_smoke_unit
 add_test(NAME allure_smoke_single
     COMMAND ${CMAKE_COMMAND}
         -DPROG=$<TARGET_FILE:gentest_unit_tests>
-        -DFILE=${CMAKE_CURRENT_BINARY_DIR}/allure_unit_single/result-0.json
+        -DFILE=${CMAKE_CURRENT_BINARY_DIR}/allure_unit_single/result-0-result.json
         -DEXPECT_SUBSTRING=status\":\ \"passed
         -DARGS=--run-test=unit/arithmetic/sum\ --allure-dir=${CMAKE_CURRENT_BINARY_DIR}/allure_unit_single
         -P ${PROJECT_SOURCE_DIR}/cmake/CheckFileContains.cmake)
@@ -283,15 +283,15 @@ add_test(NAME allure_smoke_single
 add_test(NAME allure_logs_attachment
     COMMAND ${CMAKE_COMMAND}
         -DPROG=$<TARGET_FILE:gentest_failing_tests>
-        -DFILE=${CMAKE_CURRENT_BINARY_DIR}/allure_logs/result-0.json
-        -DEXPECT_SUBSTRING=\"attachments\":\ \[\ {\ \"name\"\:\ \"logs\"\,
+        -DFILE=${CMAKE_CURRENT_BINARY_DIR}/allure_logs/result-0-result.json
+        -DEXPECT_SUBSTRING=\"attachments\":\ \[\ {\ \"name\"\:\ \"logs\"\,\ \"source\"\:\ \"result-0-attachment.txt\"
         -DARGS=--run-test=failing/logging/attachment\ --allure-dir=${CMAKE_CURRENT_BINARY_DIR}/allure_logs
         -P ${PROJECT_SOURCE_DIR}/cmake/RunAndCheckFile.cmake)
 
 add_test(NAME allure_logs_attachment_file
     COMMAND ${CMAKE_COMMAND}
         -DPROG=$<TARGET_FILE:gentest_failing_tests>
-        -DFILE=${CMAKE_CURRENT_BINARY_DIR}/allure_logs/result-0-logs.txt
+        -DFILE=${CMAKE_CURRENT_BINARY_DIR}/allure_logs/result-0-attachment.txt
         -DEXPECT_SUBSTRING=hello from log
         -DARGS=--run-test=failing/logging/attachment\ --allure-dir=${CMAKE_CURRENT_BINARY_DIR}/allure_logs
         -P ${PROJECT_SOURCE_DIR}/cmake/RunAndCheckFile.cmake)
