cmake: add options GENTEST_USE_BOOST_JSON and GENTEST_USE_BOOST_UUID; propagate to test targets\n\n- New CMake options control optional Boost JSON and Boost UUID usage in generated runtimes.\n- gentest_attach_codegen now defines the corresponding compile macros on consumer targets.\n- Default OFF; no external dependency required unless explicitly enabled.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,6 +19,8 @@ include(GentestCodegen)
 add_subdirectory(src)
 
 option(${PROJECT_NAME}_BUILD_TESTING "Build the testing tree" ON)
+option(GENTEST_USE_BOOST_JSON "Use Boost.JSON for Allure writer in generated runtime" OFF)
+option(GENTEST_USE_BOOST_UUID "Use Boost.UUID for UUID generation in generated runtime" OFF)
 if(${PROJECT_NAME}_BUILD_TESTING)
     include(CTest)
     enable_testing()
